# zgc3-ai-assistant

./: .env  .gitignore  README.md  Vibe Coding List.md  a.json  app.py  chunks_preview.json  environment.yml  pyproject.toml
assets/: style.css
cache/: demos.json
rag_data/: README.md  学校简介.md  校史馆&官网-学校介绍.md  校史馆-发展历程.md  校史馆-各校区.md  校史馆-校际交流与跨龄教育.md  校史馆-社团课程活动.md  校史馆-红色教育.md  百度百科.md
rag_index/: documents.json  file_trees.json  index.faiss
scripts/: init_demo_cache.py  run_app.bat
tests/: README.md  test_baidu_search.py  test_orchestrator.py  test_rag.py
zgc3_assistant/: __init__.py  cache_manager.py  config.py  logging_config.py  orchestrator.py
zgc3_assistant/adapters/: __init__.py  dashscope_client.py  ytdlp_search.py
zgc3_assistant/rag/: __init__.py  build_index.py  chunker.py  loader.py  retriever.py  store.py
zgc3_assistant/ui/: layout.py
